--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
                 <title>g3-articate</title>
                 <link rel="stylesheet" href="style/arcitex.css">
 </head>
-<body>
+<body class="work-sans-font">
       <header>
-                
+       <nav class="navbar">
+<h3 class="brand">G3-articate</h3>
+       </nav>         
       </header>   
       <main>
 
